# c_demo

./: .gitignore  arith.c  double.c  intro.txt  simple_lexical_analyzer.c  stack.c  stack.h  sum_to_stack.c
big_number/: big_number.c
bison_test/: test.y
bison_test/ast/: a.out  exp.tab.c
bithack/: compute_the_sign_of_an_integer.c
build_your_own_lisp/: doge_code.c  prompt.c
c4/: courses.c  printer.c
c4/shell/: pyclient.py
c_ping/: ping.c  test.c
compile_principle/: dfa.dot  dfa_min.dot  nfa.dot  simple_parser.c  sum_to_stack.c
compile_principle/ast/: ast.c  ast.h  exp.tab.c  exp.y  goal.txt
compile_principle/ast2/: ast.c  ast.h  exp.y  main.c  test.txt
compile_principle/bison_test/: test.y
compile_principle/codegen/: C--.html  gen-stack.c  stack-machine.c  stack-machine.h
compile_principle/new_codegen/: ast.c  ast.h  gen-stack.c  list.c  list.h  main.c  semant.c  stack-machine.c  stack-machine.h  stack2x86.c  stack2x86.h
compile_principle/semant/: C--.html  semant.c  test2.txt
json/: CMakeLists.txt  leptjson.c  test.c
learn_c_the_hard_way/ex10/: ex10.c
learn_c_the_hard_way/ex11/: ex11.c
learn_c_the_hard_way/ex12/: ex12.c
learn_c_the_hard_way/ex13/: ex13.c
learn_c_the_hard_way/ex14/: ex14.c
learn_c_the_hard_way/ex15/: ex15.c
learn_c_the_hard_way/ex17/: ex17.c
learn_c_the_hard_way/ex18/: ex18.c
learn_c_the_hard_way/ex19/: object.c
learn_c_the_hard_way/ex20/: dbg.h
log/: CMakeLists.txt
log/include/: log.h
log/src/: log.c  test.c
shell/: client.c  server.py
test/: insert_sort.c  merge_sort.c
(+11 files in other folders)
